examples/type_system/failing/100_unclosed_string_recovery.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/100_unclosed_string_recovery.flx
// error[E071]: Unterminated String
//
// String literal is missing closing quote.
//
//   examples/type_system/failing/100_unclosed_string_recovery.flx:20:13
//    |
// 20 | let label = "The answer
//    |             ^^^^^^^^^^^
//
// Hint:
//   Add a closing " at the end of the string.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E071

let label = "The answer
let after = 1
print(after)
